refactor SE